--- a/n8n-frontend/package.json
+++ b/n8n-frontend/package.json
@@ -14,20 +14,31 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.83.0",
+    "autoprefixer": "^10.4.21",
     "canvas-confetti": "^1.9.3",
-    "framer-motion": "^12.23.6",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "mongodb": "^6.17.0",
+    "motion": "^12.23.9",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.7.0",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
