--- a/n8n-frontend/package.json
+++ b/n8n-frontend/package.json
@@ -14,10 +14,14 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.3.0",
+    "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.83.0",
+    "@types/three": "^0.178.1",
     "autoprefixer": "^10.4.21",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
@@ -27,6 +31,7 @@
     "motion": "^12.23.9",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
@@ -38,7 +43,8 @@
     "reactflow": "^11.11.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
